[gd_scene load_steps=3 format=2]

[ext_resource path="res://tetris/Block.tscn" type="PackedScene" id=1]
[ext_resource path="res://tetris/ShapedBlock.gd" type="Script" id=2]

[node name="I-Shape" type="Node2D"]
script = ExtResource( 2 )
color = Color( 0.262745, 0.776471, 1, 1 )

[node name="BlockRotation" type="Node2D" parent="."]
position = Vector2( 0, 2 )

[node name="Block" parent="BlockRotation" instance=ExtResource( 1 )]
position = Vector2( -6, 0 )

[node name="Block2" parent="BlockRotation" instance=ExtResource( 1 )]
position = Vector2( -2, 0 )

[node name="Block3" parent="BlockRotation" instance=ExtResource( 1 )]
position = Vector2( 2, 0 )

[node name="Block4" parent="BlockRotation" instance=ExtResource( 1 )]
position = Vector2( 6, 0 )
